--- a/dev/partials/home.html
+++ b/dev/partials/home.html
@@ -1,4 +1,11 @@
-<div ng-controller="HomeCtrl">
+<div>
+	<div class="jumbotron">
+		<div class="container">
+			<h3>Selamat datang di Treasure Hunt!</h3>
+			<p>Spring Gathering PPI Swedia 2017. <br>Temukan lokasi-lokasi di Stockholm berdasarkan teka-teki di bawah ini</p>
+			<p><a href="" ng-click="go('/howto')">Lihat aturan main di sini</a></p>
+		</div>
+	</div>
 	<div class="container home">
 	    <div class="rows">
 	        <div class="col-sm-12">
