--- a/dev/sass/bootstrap.scss
+++ b/dev/sass/bootstrap.scss
@@ -68,18 +68,33 @@
 html,body{
 	height: 100%;
 }
-
+.header{
+    background: #fff;
+    h4{margin: 15px 20px 0 0;}
+}
+.navbar-nav{
+    .active a{background: #eee;}
+}
+.jumbotron{padding-top: 98px;
+    a{
+        color: $brand-warning;
+        text-decoration: none;
+    }
+}
 .modal-wrapper{
 	display: block;
     position: fixed;
-    top: 0;
+    top: 50px;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(#fff,0.8);
+    background: rgba(#000,0.8);
     .pull-center{text-align: center;margin: 30px 0 10px 0;}
     h4{font-size: 1.5em;font-weight: 400;}
 }
 .image-modal{
 	width: 100%;
+}
+.btn{
+    margin-bottom: 30px;
 }
