--- a/dev/sass/bootstrap/_variables.scss
+++ b/dev/sass/bootstrap/_variables.scss
@@ -3,6 +3,7 @@
 // in Sass 3.3 this can be improved with: function-exists(twbs-font-path)
 $bootstrap-sass-asset-helper: (twbs-font-path("") != unquote('twbs-font-path("")')) !default;
 @import url('https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600,700,800,900');
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Roboto:100,300,400,500,700');
 //
 // Variables
 // --------------------------------------------------
@@ -18,9 +19,9 @@ $gray:                   lighten(#000, 33.5%) !default; // #555
 $gray-light:             lighten(#000, 60%) !default;   // #999
 $gray-lighter:           lighten(#000, 93.5%) !default; // #eee
 
-$brand-primary:         #000 !default;
-$brand-success:         #5cb85c !default;
-$brand-info:            #5bc0de !default;
+$brand-primary:         #3aa !default;
+$brand-success:         #4dc !default;
+$brand-info:            #0af !default;
 $brand-warning:         #f0ad4e !default;
 $brand-danger:          #d9534f !default;
 $brand-onblack:         #fff !default;
@@ -31,7 +32,7 @@ $brand-onblack:         #fff !default;
 //## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-$body-bg:               #000 !default;
+$body-bg:               #eee !default;
 //** Global text color on `<body>`.
 $text-color:            $gray-dark !default;
 
@@ -474,9 +475,9 @@ $pager-disabled-color:                 $pagination-disabled-color !default;
 //##
 
 $jumbotron-padding:              30px !default;
-$jumbotron-color:                inherit !default;
-$jumbotron-bg:                   $gray-lighter !default;
-$jumbotron-heading-color:        inherit !default;
+$jumbotron-color:                #fff !default;
+$jumbotron-bg:                   $brand-primary !default;
+$jumbotron-heading-color:        #fff !default;
 $jumbotron-font-size:            ceil(($font-size-base * 1.5)) !default;
 
 
