--- a/dev/css/bootstrap.css
+++ b/dev/css/bootstrap.css
@@ -6590,10 +6590,15 @@ html, body {
   height: 100%;
 }
 
+.margin-fixed {
+  margin-top: 50px;
+}
+
 .header {
   background: #fff;
 }
-.header h4 {
+.header .h4 {
+  display: inline-block;
   margin: 15px 20px 0 0;
 }
 
@@ -6602,29 +6607,30 @@ html, body {
 }
 
 .jumbotron {
-  padding-top: 98px;
+  padding-top: 88px;
 }
 .jumbotron a {
-  color: #f0ad4e;
-  text-decoration: none;
+  color: #fff;
+  text-decoration: underline;
 }
 
 .modal-wrapper {
   display: block;
   position: fixed;
-  top: 50px;
+  top: 0px;
+  padding-top: 50px;
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 1040;
   background: rgba(0, 0, 0, 0.8);
 }
 .modal-wrapper .pull-center {
   text-align: center;
   margin: 30px 0 10px 0;
 }
-.modal-wrapper h4 {
-  font-size: 1.5em;
-  font-weight: 400;
+.modal-wrapper .h4 {
+  color: #fff;
 }
 
 .image-modal {
@@ -6633,4 +6639,39 @@ html, body {
 
 .btn {
   margin-bottom: 30px;
+}
+
+.menu-mobile {
+  position: absolute;
+  right: 10px;
+  top: 14px;
+  display: none;
+}
+.menu-mobile a {
+  display: block;
+}
+.menu-mobile span.icon-bars {
+  width: 25px;
+  height: 2px;
+  background: #3aa;
+  display: block;
+  position: relative;
+  margin-bottom: 6px;
+}
+
+.collapse {
+  -moz-transition: height 0.35s ease;
+  -o-transition: height 0.35s ease;
+  -webkit-transition: height 0.35s ease;
+  transition: height 0.35s ease;
+}
+
+@media (max-width: 768px) {
+  .header .h4 {
+    margin-left: 20px;
+  }
+
+  .menu-mobile {
+    display: block;
+  }
 }
