--- a/dev/partials/header.html
+++ b/dev/partials/header.html
@@ -1,13 +1,18 @@
 <header class="header navbar navbar-fixed-top">
 	<div class="container">
 		<div class="navbar-header">
-			<button aria-controls="bs-navbar" aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-navbar" data-toggle="collapse" type="button"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-			<h4>Spring Gathering 2017</h4>
+			<div class="menu-mobile"><a href="" ng-click="menuClick()">
+				<span class="icon-bars"></span>
+				<span class="icon-bars"></span>
+				<span class="icon-bars"></span>
+			</a></div>
+			<a href="" class="h4" ng-click="go('/home')">Spring Gathering 2017</a>
 		</div>
-		<div id="bs-navbar" class="collapse navbar-collapse">
+		<div id="bs-navbar" ng-class="mobileNav" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="" ng-click="go('/home')">Home</a></li>
-				<li><a href="" ng-click="go('/howto')">Petunjuk Game</a></li>
+				<li><a href="" ng-click="goMenu('/home')">Home</a></li>
+				<li><a href="" ng-click="goMenu('/howto')">Petunjuk Game</a></li>
+				<li><a href="" ng-click="goMenu('/group')">Kelompok</a></li>
 			</ul>
 		</div>
 	</div>
