--- a/dev/sass/bootstrap.scss
+++ b/dev/sass/bootstrap.scss
@@ -68,33 +68,72 @@
 html,body{
 	height: 100%;
 }
+.margin-fixed{
+    margin-top: 50px;
+}
 .header{
     background: #fff;
-    h4{margin: 15px 20px 0 0;}
+    .h4{
+        display: inline-block;
+        margin: 15px 20px 0 0;
+    }
 }
 .navbar-nav{
     .active a{background: #eee;}
 }
-.jumbotron{padding-top: 98px;
+.jumbotron{padding-top: 88px;
     a{
-        color: $brand-warning;
-        text-decoration: none;
+        color: #fff;
+        text-decoration: underline;
     }
 }
 .modal-wrapper{
 	display: block;
     position: fixed;
-    top: 50px;
+    top: 0px;
+    padding-top: 50px;
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: 1040;
     background: rgba(#000,0.8);
     .pull-center{text-align: center;margin: 30px 0 10px 0;}
-    h4{font-size: 1.5em;font-weight: 400;}
+    .h4{color: #fff;}
 }
 .image-modal{
 	width: 100%;
 }
 .btn{
     margin-bottom: 30px;
+}
+
+.menu-mobile {
+    position: absolute;
+    right: 10px;
+    top: 14px;
+    display: none;
+    a {
+        display: block;
+    }
+    span.icon-bars {
+        width: 25px;
+        height: 2px;
+        background: #3aa;
+        display: block;
+        position: relative;
+        margin-bottom: 6px;
+    }
+}
+
+.collapse{
+    @include transition(height .35s ease);
+}
+
+@media (max-width: 768px) {
+  .header .h4 {
+    margin-left: 20px;
+  }
+  .menu-mobile{
+    display: block;
+  }
 }
