--- a/dev/partials/home.html
+++ b/dev/partials/home.html
@@ -1,7 +1,7 @@
 <div>
 	<div class="jumbotron">
 		<div class="container">
-			<h3>Selamat datang di Treasure Hunt!</h3>
+			<h3>Selamat datang di Amazing Race!</h3>
 			<p>Spring Gathering PPI Swedia 2017. <br>Temukan lokasi-lokasi di Stockholm berdasarkan teka-teki di bawah ini</p>
 			<p><a href="" ng-click="go('/howto')">Lihat aturan main di sini</a></p>
 		</div>
