--- a/dev/partials/howto.html
+++ b/dev/partials/howto.html
@@ -1,7 +1,7 @@
 <div class="jumbotron">
 	<div class="container">
-		<h3>Petunjuk Scavanger Hunt</h3>
-		<p>Selain berburu tempat menarik di Stockholm, masing-masing tim akan berkompetisi dengan tim lain di <strong>mini-game round</strong>. Peserta <strong>wajib</strong> berada di lokasi pos sesuai jadwal. Jangan sampai ngaret ya!</p>
+		<h3>Petunjuk Amazing Race</h3>
+		<p>Selain memecahkan teka-teki seputar lokasi tersembunyi di Stockholm, masing-masing tim akan berkompetisi dengan tim lain di <strong>mini-game round</strong>. Peserta <strong>wajib</strong> berada di lokasi pos sesuai jadwal. Jangan sampai ngaret ya!</p>
 	</div>
 </div>
 <div class="container">
@@ -24,6 +24,7 @@
 				Selain berburu tempat menarik di Stockholm, masing-masing tim akan berkompetisi dengan tim lain di mini-game round. 
 
 				<br>Peserta <em>wajib</em> berada di lokasi pos dengan jadwal berikut. Jangan sampai ngaret ya!
+				<br><strong>Apabila terlambat lebih dari 15 menit maka tidak boleh mengikuti mini game round dan tidak akan mendapatkan poin.</strong>
 			</p>
 			<h4>Lokasi POS</h4>
 			<p>
@@ -75,11 +76,11 @@
 				<br>Pos 2 : Prisila +62 813 1007 6083 (WA) atau +46 73 5550481 (Nomor Swedia)
 			</p>
 			<p>
-				Pemenang scavenger hunt adalah yang paling banyak mengumpulkan point
+				Pemenang Amazing Race adalah yang paling banyak mengumpulkan point
 
 				<br><strong>Peserta sudah harus tiba di Wisma KBRI pada jam 18.00. On time ya!</strong>
 
-				<p>Jika ada pertanyaan selama treasure hunt dapat menghubungi:</p>
+				<p>Jika ada pertanyaan selama Amazing Race dapat menghubungi:</p>
 				<ul class="list-styled">
 					<li>+46 79 022 4013 (Ela)</li>
 					<li>+46 76 936 4867 (Putri)</li>
@@ -96,8 +97,8 @@
 					<ul>
 						<li>+15 - Foto group (selfie atau gaya bebas seru) di lokasi checkpoint</li>
 						<li>+10 - Foto group (selfie atau gaya bebas seru) dengan object bonus point di dalam satu frame</li>
-						<li>+50 - Tim pemenang mini-games di post game</li>
-						<li>+20 - Tim yang kalah pada mini-game di post game</li>
+						<li>+50 - Tim pemenang mini-game round di post game</li>
+						<li>+20 - Tim yang kalah pada mini-game round di post game</li>
 					</ul>
 				</div>
 			</div>
